--- a/plugins/spellchecker/core/src/com/intellij/spellchecker/options/SpellCheckerOptions.form
+++ b/plugins/spellchecker/core/src/com/intellij/spellchecker/options/SpellCheckerOptions.form
@@ -21,7 +21,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="localy chached"/>
+          <text value="locally cached"/>
         </properties>
       </component>
       <component id="db28" class="javax.swing.JLabel" binding="globalDictionaries">
