--- a/platform-impl/src/com/intellij/openapi/fileTypes/ex/FileTypeChooserPanel.form
+++ b/platform-impl/src/com/intellij/openapi/fileTypes/ex/FileTypeChooserPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.intellij.openapi.fileTypes.ex.FileTypeChooser">
-  <grid id="27dc6" binding="myPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="myPanel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -35,7 +35,7 @@
       </component>
       <scrollpane id="f588b">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="2" use-parent-layout="false">
             <preferred-size width="150" height="200"/>
           </grid>
         </constraints>
@@ -48,14 +48,29 @@
           </component>
         </children>
       </scrollpane>
-      <component id="4aff8" class="javax.swing.JLabel">
+      <component id="7d3aa" class="javax.swing.JRadioButton" binding="myOpenInIdea">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/FileTypesBundle" key="filetypes.recognized.group"/>
+          <selected value="true"/>
+          <text value="Open matching files in PRODUCTNAME as type:"/>
+        </properties>
+      </component>
+      <component id="d788a" class="javax.swing.JRadioButton" binding="myOpenAsNative">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Open matching files in associated application"/>
         </properties>
       </component>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="buttonGroup1">
+      <member id="7d3aa"/>
+      <member id="d788a"/>
+    </group>
+  </buttonGroups>
 </form>
