--- a/compiler/impl/com/intellij/compiler/options/CompilerOptionsPanel.form
+++ b/compiler/impl/com/intellij/compiler/options/CompilerOptionsPanel.form
@@ -3,7 +3,7 @@
   <grid id="1663f" binding="myPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="28" y="24" width="573" height="379"/>
+      <xy x="28" y="24" width="883" height="379"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -16,25 +16,17 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="2dbd6" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="-1">
+          <grid id="2dbd6" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-            <border type="none"/>
+            <border type="none" title-resource-bundle="messages/CompilerBundle" title-key="label.option.resource.patterns.text"/>
             <children>
-              <component id="559dd" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text resource-bundle="messages/CompilerBundle" key="label.option.resource.patterns.text"/>
-                </properties>
-              </component>
               <component id="263f1" class="javax.swing.JTextField" binding="myResourcePatternsField">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
@@ -42,6 +34,14 @@
                   <focusable value="true"/>
                   <margin top="0" left="2" bottom="0" right="0"/>
                   <text value="" noi18n="true"/>
+                </properties>
+              </component>
+              <component id="316d6" class="javax.swing.JLabel" binding="myPatternLegendLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text resource-bundle="messages/CompilerBundle" key="label.resource.patterns.legend"/>
                 </properties>
               </component>
             </children>
