--- a/refactoring/impl/com/intellij/refactoring/introduceparameterobject/IntroduceParameterObjectForm.form
+++ b/refactoring/impl/com/intellij/refactoring/introduceparameterobject/IntroduceParameterObjectForm.form
@@ -93,9 +93,9 @@
                   <text value="&amp;Package name"/>
                 </properties>
               </component>
-              <component id="f7c72" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="packageTextField">
+              <component id="90bcb" class="com.intellij.ui.ReferenceEditorComboWithBrowseButton" binding="packageTextField" custom-create="true">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="1.0" weighty="0.0"/>
                 </constraints>
                 <properties/>
@@ -119,9 +119,9 @@
                   <text value="&amp;Name"/>
                 </properties>
               </component>
-              <component id="e5d5a" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="existingClassField">
+              <component id="e03f" class="com.intellij.ui.ReferenceEditorComboWithBrowseButton" binding="existingClassField" custom-create="true">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="1.0" weighty="0.0"/>
                 </constraints>
                 <properties/>
