--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/config/ui/GroovyFacetEditor.form
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/config/ui/GroovyFacetEditor.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="myPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="251" height="97"/>
+      <xy x="20" y="20" width="297" height="97"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -18,33 +18,48 @@
         <children>
           <component id="4579" class="javax.swing.JComboBox" binding="myComboBox" custom-create="true">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
-          <component id="4d3fb" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="mySdkPath">
+          <component id="8bf97" class="javax.swing.JRadioButton" binding="myExistingSdk">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="7" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <selected value="true"/>
+              <text value="Existing SDK:"/>
+            </properties>
           </component>
-          <component id="381e6" class="javax.swing.JCheckBox" binding="myAddNewSdkCb">
+          <component id="964e1" class="javax.swing.JRadioButton" binding="myNewSdk">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text resource-bundle="org/jetbrains/plugins/groovy/GroovyBundle" key="add.new.groovy.lib"/>
+              <text value="New SDK"/>
             </properties>
           </component>
-          <hspacer id="5870a">
+          <hspacer id="66fd5">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
+          <component id="ff66a" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="mySdkPath">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="200" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="buttonGroup1">
+      <member id="8bf97"/>
+      <member id="964e1"/>
+    </group>
+  </buttonGroups>
 </form>
