--- a/vcs-impl/src/com/intellij/openapi/vcs/changes/ui/EditChangelistPanel.form
+++ b/vcs-impl/src/com/intellij/openapi/vcs/changes/ui/EditChangelistPanel.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.intellij.openapi.vcs.changes.ui.EditChangelistPanel">
-  <grid id="27dc6" binding="myContent" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="myContent" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="500" height="197"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -52,6 +52,21 @@
           </component>
         </children>
       </scrollpane>
+      <grid id="361c1" binding="myAdditionalControlsPanel" layout-manager="FlowLayout" hgap="0" vgap="0" flow-align="1">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="c949a" class="javax.swing.JCheckBox" binding="myMakeActiveCheckBox">
+            <constraints/>
+            <properties>
+              <text resource-bundle="messages/VcsBundle" key="new.changelist.make.active.checkbox"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
