--- a/vcs-impl/src/com/intellij/openapi/vcs/changes/ui/NewChangelistDialog.form
+++ b/vcs-impl/src/com/intellij/openapi/vcs/changes/ui/NewChangelistDialog.form
@@ -10,23 +10,15 @@
       <nested-form id="41c97" form-file="com/intellij/openapi/vcs/changes/ui/EditChangelistPanel.form" binding="myPanel" custom-create="true">
         <constraints border-constraint="Center"/>
       </nested-form>
-      <grid id="4554b" binding="myBottomPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="4554b" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="South"/>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="413d4" class="javax.swing.JCheckBox" binding="myMakeActiveCheckBox">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text resource-bundle="messages/VcsBundle" key="new.changelist.make.active.checkbox"/>
-            </properties>
-          </component>
           <component id="58c5a" class="javax.swing.JLabel" binding="myErrorLabel">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <foreground awt-color="red"/>
